Fix submenu overlapping breadcrumbs issue

--- a/css/subsection.css
+++ b/css/subsection.css
@@ -13,6 +13,7 @@
   background-color: white;
   box-shadow: 0px 6px 20px -10px rgba(0,0,0,0.2);
   position: fixed;
+  z-index: 1;
 }
 .breadcrumbs li {
   display: inline;
